# leads_coloring

./: .env-example  .env.example  .flake8  .gitignore  .pylintrc  .ycm_extra_conf.py  Dockerfile  MIGRATION_FASTSTREAM.md  README.md  broker_app.py  docker-compose.dev.vendor.yml  docker-compose.prod.vendor.yml  docker-compose.yml  env.example  main.py  pyproject.toml  requirements.txt
migrations/: env.py
src/: Dockerfile  Dockerfile.dev  entrypoint.app.sh  manage.py  requirements.txt
src/alembic/: env.py
src/alembic/versions/: 001_initial.py
src/amocrm/: rate_limited_session.py  rate_limiter.py  requests_amocrm.py
src/app/: broker_app.py  web_app.py
src/app/amocrm/: rate_limited_session.py  rate_limiter.py  requests_amocrm.py
src/app/api/api_v1/: api.py
src/app/api/api_v1/endpoints/: coloring.py  healthcheck.py
src/app/cache/: aiocache.py
src/app/commands/: __init__.py  run_devserver.py  run_prodserver.py  run_scheduler.py  run_worker.py
src/app/conditions/: evaluator.py
src/app/core/: app.py  context.py  exceptions.py  handlers.py  logging.py  settings.py
src/app/core/broker/: __init__.py  app.py  config.py  connection.py  dependencies.py  rpc.py
src/app/db/: __init__.py  async_session.py  base_class.py
src/app/models/: coloring_rule.py
src/app/repository/sql/: base.py
src/app/scheduler/: __init__.py  scheduler.py
src/app/schemas/: coloring.py
src/app/services/: coloring_service.py  condition_evaluator.py
src/app/utils/: lifespan.py  tokens.py
src/broker/: app.py  config.py  dependencies.py
src/broker/middlewares/: logging_middleware.py  retry_middleware.py
src/common/: config.py  database.py  log_config.py  models.py
src/rules/: models.py  routers.py  schemas.py  services.py
(+9 files in other folders)
