[project]
name = "leads-coloring"
version = "0.1.0"
description = "AmoCRM Leads Coloring Widget Backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika==9.5.5",
    "aiohttp==3.9.5",
    "aiormq==6.8.1",
    "alembic==1.16.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.10",
    "certifi==2025.6.15",
    "click==8.2.1",
    "exceptiongroup==1.3.0",
    "fastapi==0.115.14",
    "faststream[rabbit]==0.6.4",
    "greenlet==3.2.3",
    "gunicorn==23.0.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.10",
    "Mako==1.3.10",
    "MarkupSafe==3.0.2",
    "multidict==6.5.1",
    "packaging==25.0",
    "pamqp==3.3.0",
    "propcache==0.3.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "PyJWT==2.9.0",
    "python-dotenv==1.1.1",
    "pytz==2025.2",
    "sniffio==1.3.1",
    "SQLAlchemy==2.0.41",
    "starlette==0.46.2",
    "typing-extensions==4.14.0",
    "uvicorn==0.34.3",
    "yarl==1.20.1",
]

[dependency-groups]
dev = [
    "black>=25.9.0",
    "flake8>=7.3.0",
    "mypy>=1.18.2",
    "pylint>=3.3.9",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
ignore_missing_imports = true
strict_optional = true
